--- a/GCP/GAT-Gate/src/app/components/welcome/welcome.component.html
+++ b/GCP/GAT-Gate/src/app/components/welcome/welcome.component.html
@@ -22,14 +22,10 @@
             interna del ecosistema tanto para personal, como para proyectos e incluso para el mapeo de
             objetivos y tareas</h4>
 
-            <button
-            type="button"
+            <button type="button"
             class="btn btn-lg btn-success"
             data-mdb-toggle="popover"
-            title="Popover title"
-            >
-            <a class = "router" routerLink="public/kumu">Ver Mapas</a>
-          </button>
+            title="Popover title" routerLink="/public/kumu">Ver Kumu</button>
 
     </div>
     <div class="col">
@@ -38,7 +34,7 @@
         <h4>El Dashboards principal del GAT Gate es una herramienta para el monitoreo del estado actual del proyecto GAT,
             esto es un mecanismo visual para la representación de información de una manera amigable con el
             usuario. La información que se presenta es variada y está relacionada a datos sobre actividades diarias, porcentajes de avances
-            de objetivos, estadísticas sobre procesos o resultados, entre otras. PAAAALAAA
+            de objetivos, estadísticas sobre procesos o resultados, entre otras.
             Estos datos se obtienen a través de diferentes repositorios que guardan esta información, por ejemplo, OSF.</h4>
 
             <button
@@ -46,8 +42,7 @@
             class="btn btn-lg btn-success"
             data-mdb-toggle="popover"
             title="Popover title"
-            >
-            <a class = "router" routerLink="public/dashboard">Ver Dashboards</a>
+            routerLink="/public/dashboard">Ver Dashboards
           </button>
 
     </div>
@@ -65,8 +60,7 @@
             class="btn btn-lg btn-success"
             data-mdb-toggle="popover"
             title="Popover title"
-            >
-            <a class = "router" routerLink="public/kumu">Iniciar Sesión</a>
+            routerLink="/public/login">Iniciar Sesión
           </button>
 
     </div>
